--- a/index.html
+++ b/index.html
@@ -38,10 +38,17 @@
 
     <section id="hero">
         <h4 style="font-size: 20px; padding-bottom: 15px; color:#088178;">Trade-in-offer</h4>
-        <h2 style="font-size: 46px; line-height: 54px;">Super value deals</h2>
+        <h2 style="font-size: 46px; line-height: 54px;">   <div class="bnc">
+            <h2>
+                <div class="typewrite">Super value deals!!!</div>
+            </h2>
+        </div></h2>
         <h1 style="font-size: 50px; line-height: 64px; color:#088178;">On all products</h1>
         <p style="color: #1a1a1a; margin: 15px 0 20px 0; color: #467b52;">Save more with coupons & up to 70% off!</p>
         <button>Shop Now</button>
+        <span class="type"></span>xsscs
+       
+        
 
     </section>
 
